--- a/flaskr/templates/profile/viewprofile.html
+++ b/flaskr/templates/profile/viewprofile.html
@@ -11,8 +11,11 @@
                     <br>
                     <h2 class ="text-center mt-3">Occupation: {{ profile['occupation']}}</h2>
                     <h3 class ="text-center">Age: {{ age }} </h3> 
+                    {% if g.user['id'] == profile['user_id'] %}
                     <a class="nav-link btn btn-info mx-auto text-white" href="{{ url_for('roommeet.change_profile') }}">Change Profile</a>
+                    {% endif %}
             </div>
+
     </div>
 </div>
 
