Made housing flip card

--- a/flaskr/templates/algorithm/house.html
+++ b/flaskr/templates/algorithm/house.html
@@ -21,7 +21,11 @@
                     ${{ housing['rent'] }}
 
                     <h3>Age Range</h3>
-                    {{ housing['minage'] }} - {{ housing['maxage'] }}
+                    {{ housing['ageMin']}} - {{ housing['ageMax']}}
+
+                    <h4>Description</h4>
+                    {{ housing['description']}}
+
 
                 </p>
             </div>
