--- a/flaskr/templates/algorithm/house.html
+++ b/flaskr/templates/algorithm/house.html
@@ -21,7 +21,7 @@
                     ${{ housing['rent'] }}
 
                     <h3>Age Range</h3>
-                    {{ housing['ageMin']}} - {{ housing['ageMax']}}
+                    {{ profile['priceMin'] }} - {{ profile['priceMax']}}
 
                     <h4>Description</h4>
                     {{ housing['description']}}
