--- a/flaskr/templates/algorithm/viewselectors.html
+++ b/flaskr/templates/algorithm/viewselectors.html
@@ -3,12 +3,26 @@
 
 {% block content %}
 
-<h1>{{housing['street']}} Selectors</h1>
+
+<div class="boxed">
+    <div class="container">
+        <div class= "user-details">
+            <h1>Your Selectors</h1>
+        </div>
+    </div>
+</div>
 {% for m in plist %}
 
-<a href="{{ url_for('algorithm.match_profile', profid=(m['user_id'])) }}">{{ m['first_name'] }} {{ m['middle_name'] }} {{ m['last_name'] }}</a>
-<br>
 
+<div class="boxed">
+    <div class="container">
+        <div class= "user-details">
+            
+            <a href="{{ url_for('algorithm.match_profile', profid=(m['user_id'])) }}">{{ m['first_name'] }} {{ m['middle_name'] }} {{ m['last_name'] }}</a>
+            <br>         
+        </div>
+    </div>
+</div>
 
 {% endfor %}
 
