Made changes to profile

--- a/flaskr/templates/algorithm/profile.html
+++ b/flaskr/templates/algorithm/profile.html
@@ -12,11 +12,55 @@
             <div class="flip-card-back">
                 <p>
                     <h1>{{ profile['first_name'] }} {{ profile['middle_name'] }} {{ profile['last_name'] }}</h1>
-                    <h2>Occupation:</h2>{{ profile['occupation']}}
-                    <h3>Age:</h3> {{ age }} 
+                    <h2>Occupation: {{ profile['occupation']}} </h2> 
+                    <h3>Age: {{ age }} </h3>
+                    <p>Age Range:  {{profile['ageMin']}} - {{profile['ageMax']}}</p>
 
+                    {{ profile['city'] }}, {{ profile['state'] }} {{ profile['zipcode'] }}
+
+                    <br>
+
+                    {% if profile['description'] != "" %}
                     <h4>Description</h4>
                     {{profile['description']}}
+                    {% endif %}
+
+                    <br>
+
+                    <h4>Rent Range</h4>
+                    $ {{profile['priceMin']}} - {{profile['priceMax']}}
+
+                    <br>
+
+                    {% if profile['genderPref'] == 'C' %}
+                        Co-ed roommates
+                    {% elif profile['genderPref'] == 'M' %}
+                        Prefers male roommates
+                    {% elif profile['looking'] == 'F' %}
+                        Prefers female roommates
+                    {% elif profile['looking'] == 'I' %}
+                        Prefers to live independent
+                    {% endif %}
+
+                    {% if profile['pets'] == 'Y' %}
+                        Cool with pets!
+                    {% else %}
+                        No Pets!
+                    {% endif %}
+
+                    <br>
+                    
+                    {% if profile['looking'] == 'B' %}
+                        Looking for roommates and housing
+                    {% elif profile['looking'] == 'H' %}
+                        Looking for housing only
+                    {% elif profile['looking'] == 'R' %}
+                        Looking for roommates only
+                    {% endif %}
+
+
+
+
                 </p>
             </div>
         </div>
