--- a/flaskr/templates/algorithm/selectmatch.html
+++ b/flaskr/templates/algorithm/selectmatch.html
@@ -4,7 +4,6 @@
 {% block content %}
 
 
-Phone: {{ phone }}
 <div class="boxed">
     <div class="container">
             <div class= "user-details">
@@ -14,6 +13,7 @@ Phone: {{ phone }}
                     <br>
                     <h2 class ="text-center mt-3">Occupation: {{ profile['occupation']}}</h2>
                     <h3 class ="text-center">Age: {{ age }} </h3> 
+                    <h3 class ="text-center">Phone: {{ phone }} </h3> 
                     {% if g.user['id'] == profile['user_id'] %}
                     <a class="nav-link btn btn-info mx-auto text-white" href="{{ url_for('roommeet.change_profile') }}">Change Profile</a>
                     {% endif %}
