--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <title>{% block title %}{% endblock %}</title>
+<meta charset="UTF-8">
 <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
